src/objects/Permission__c.object
<CustomObject>
    <fields>
        <fullName>ContactKey__c</fullName>
        <label>ContactKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permission</relationshipLabel>
        <relationshipName>Permission</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
     <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>CARE</fullName>
                </value>
                <value>
                    <fullName>Intrabiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permission_Answer__c</fullName>
        <label>Permission Answer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Date__c</fullName>
        <label>Permission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Permission_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Permission Question</label>
        <referenceTo>Permission_Question__c</referenceTo>
        <relationshipLabel>Permission</relationshipLabel>
        <relationshipName>Permission</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_Questions_Key__c</fullName>
        <label>Permission Questions Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <label>Permission</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>web</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Permission_Question__c</columns>
        <columns>Permission_Date__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Permission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>